--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;800&display=swap');
 
-* {
+* { /* test */
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
